# healthos

./: .gitignore  .test_deepseek.py  CLAUDE.md  README.md  pyproject.toml
config/: health_rules.yaml
data/: foods.json
data/inbody/: 2026-07-02.json
docs/plans/: 2026-07-07-workout-kcal-v1-design.md
healthos/: __init__.py  banner.py  cli.py  parser.py  repl.py
healthos/db/: conn.py
healthos/db/migrations/: v001_init.sql  v002_open_question.sql  v003_inbody_full.sql  v004_chat_verify.sql  v005_audit_log.sql  v006_workout_kcal.sql  v007_chat_memory.sql
healthos/llm/: PROFILE.md  _tools.py  agent.py  chat_memory.py  client.py  deepseek.py  mock.py  profile.py  tools.py
healthos/nutrition/: activities.py  foods.py  portions.py  quantify.py
healthos/query/: __init__.py
healthos/record/: __init__.py  fix_meal.py  fix_workout.py  learn.py  workout_kcal.py  write.py
healthos/report/: deficit.py  export.py  week.py
notes/: agents.md  design.md
tests/: test_chat_memory.py  test_inbody_deficit.py  test_llm_write_tools.py  test_nutrition.py  test_parser.py  test_profile_memory.py  test_record_roundtrip.py  test_repl.py  test_workout_kcal.py
