[project]
name = "healthos"
version = "0.1.0"
description = "Personal Health Agent - recorder first, advisor later"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
healthos = "healthos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["healthos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
